# cube_petit_ros

./: .gitignore  .rosinstall  LICENSE  README.md  bashrc.txt
cube_petit/: CMakeLists.txt  package.xml
cube_petit/config/: costmap_global.yaml  costmap_local.yaml  diff_drive_controller.yaml  motor.yaml  odom.yaml  ps3.config.yaml
cube_petit/launch/: cube_petit_bringup.launch  cube_petit_gazebo_pc.launch  cube_petit_gmapping.launch  cube_petit_navigation.launch  display_cube_petit.launch  lidar_bringup.launch  motor_bringup.launch  realsense_rgbd.launch  teleop_cube_petit.launch
cube_petit/map/: map_keepout.yaml  room1.yaml
cube_petit/maps/: airi_room.yaml
cube_petit/models/: shelf.dae  shelf_pad_.dae  station.dae  station.stl
cube_petit/scripts/: save_params.py  show_movebase_status.py
cube_petit/urdf/: cube_petit.xacro
cube_petit/worlds/: ar.world  cube_office.world.old  cube_sim.world  cube_with_house.world
cube_petit_ar_docking/: CMakeLists.txt  package.xml
cube_petit_ar_docking/action/: ARDocking.action
cube_petit_ar_docking/config/ar_markers/bundles/: Marker012.xml
cube_petit_ar_docking/config/docking/: cube_petit.yaml
cube_petit_ar_docking/include/: ar_docking_controller.hpp  ar_docking_server.hpp  battery_current_monitor.hpp  geometry_util.hpp  move_base_action_client.hpp  pregoal_broadcaster.hpp  speech_util.hpp
cube_petit_ar_docking/launch/: ar_action_client.launch  ar_docking.launch  ar_tracking.launch
cube_petit_ar_docking/scripts/: ar_docking_action_client.py
cube_petit_ar_docking/src/: ar_docking_server.cpp
cube_petit_ar_docking/src/ar_docking/: ar_docking_controller.cpp  battery_current_monitor.cpp  geometry_util.cpp  move_base_action_client.cpp  pregoal_broadcaster.cpp  speech_util.cpp
cube_petit_ar_docking/srv/: CubeSpeech.srv
cube_petit_bringup/: CMakeLists.txt  README.md  package.xml
cube_petit_bringup/config/: cube_petit_analyzers.yaml  imu_witmotion.yaml  ps3.config.yaml  ps4.config.yaml
cube_petit_bringup/launch/: cube_petit_bringup.launch  cube_petit_follower.launch  imu.launch  lidar_bringup.launch  realsense_rgbd.launch  rear_camera_bringup.launch  rs_rgbd.launch  talk_and_listen.launch  teleop_cube_petit.launch
cube_petit_description/: CMakeLists.txt  README.md  package.xml
cube_petit_description/urdf/: cube_petit.old.xacro  cube_petit.xacro  cube_petit_v2.xacro
cube_petit_gazebo/: CMakeLists.txt  README.md  package.xml
cube_petit_gazebo/config/: cube_petit_v3.rviz  docking_station_simulation.yaml  pid.yaml
cube_petit_gazebo/include/: battery_charge_simulation.hpp  docking_station_simulation.hpp
cube_petit_gazebo/launch/: cube_petit_charge_doc.launch  cube_petit_gazebo_pc.launch  cube_petit_with_actor.launch
cube_petit_gazebo/launch/include/: docking_station_simulation.launch
cube_petit_gazebo/models/: Ar_shelf_pad.dae  shelf_pad.dae
cube_petit_gazebo/models/ar_room/meshes/: ar.dae
cube_petit_gazebo/models/charge_doc/: cube_petit_charge_doc.xacro
cube_petit_gazebo/models/charge_doc/meshes/: ArTag012.mtl  charge_doc_petit_position.mtl  新しいテキスト ドキュメント (1).txt
cube_petit_gazebo/models/charge_doc/meshes/old/: charge_doc_petit_decimal2.mtl  charge_doc_petit_decimal2.stl  chargedocinercia.txt  新しいテキスト ドキュメント.txt
cube_petit_gazebo/models/house/: bighouse.stl  model.sdf
cube_petit_gazebo/models/house/oldmodel/: house3.mtl  house3.stl
cube_petit_gazebo/models/sagyou_dai/: model.config  model.sdf
cube_petit_gazebo/models/sagyou_dai/materials/: sagyoudai_blend.stl
cube_petit_gazebo/models/sagyou_dai_s/: model.config  model.sdf  sagyoudai.mqo
cube_petit_gazebo/models/sagyou_dai_s/materials/: sagyou_dai.blend  sagyoudai3_mesh_yy.mtl  sagyoudai_blend.dae  sagyoudai_mesh.mtl  sagyoudai_mesh_yy.mtl
cube_petit_gazebo/models/sagyou_dai_s/original/: sagyoudai.mqo  sagyoudai_blend.blend  sagyoudai_blend.blend1
cube_petit_gazebo/models/table/: model.sdf
cube_petit_gazebo/models/table/materials/: table_mesh.mtl  table_mesh_x.mtl
cube_petit_gazebo/models/table/original/: desk.mqo  table.blend  table.blend1
cube_petit_gazebo/models/table2/: model.config  model.sdf
cube_petit_gazebo/models/table2/materials/: table.blend  table.blend1  table.dae  table.stl  table5_mesh_yy.mtl
cube_petit_gazebo/models/takeshiba/: model.config  model.sdf
cube_petit_gazebo/models/takeshiba_room27/: model.config  model.sdf
cube_petit_gazebo/scripts/: battery_charging_simulation.py  docking_station_simulation.py
cube_petit_gazebo/src/: battery_charge_simulation.cpp  docking_station_simulation.cpp
cube_petit_gazebo/worlds/: actor.world  ar.sdf  cube_office.world  cube_with_house.world  cube_with_station.world  cube_with_takeshiba.world
cube_petit_hardware_interface/: CMakeLists.txt  README.md  build.sh  package.xml  setCan0.sh
cube_petit_hardware_interface/config/: diff_drive_controller.yaml  diff_drive_controller2.yaml  motor.yaml
cube_petit_hardware_interface/include/: cube_petit_hardware_interface.hpp  dji_can_communication.hpp
cube_petit_hardware_interface/launch/: motor_bringup.launch
cube_petit_hardware_interface/src/: cube_petit_hardware_interface.cpp  dji_can_communication.cpp
cube_petit_navigation/: CMakeLists.txt  README.md  package.xml
cube_petit_people_tracking/: CMakeLists.txt  package.xml
cube_petit_ros/: CMakeLists.txt  package.xml
cube_petit_speech_to_text/: CMakeLists.txt  package.xml  setup_julius.md
cube_petit_text_to_speech/: CMakeLists.txt  package.xml
cube_petit_text_to_speech/launch/: cube_petit_text_to_speech.launch
cube_petit_text_to_speech/scripts/: jtalk.py  respeaker_light.py  text_to_emotion.py
cube_petit_text_to_speech/setup/: install-julius.sh
jbd_battery_monitor/: CMakeLists.txt  package.xml  talk_battery_remain.sh
jbd_battery_monitor/config/: monitor_params.yaml
jbd_battery_monitor/include/: jbd_battery_monitor.hpp  serial_communication.hpp
jbd_battery_monitor/launch/: battery_monitor.launch
jbd_battery_monitor/src/: jbd_battery_monitor.cpp  serial_communication.cpp
navigation_goals/: CMakeLists.txt  package.xml
(+80 files in other folders)
